--- a/index.html
+++ b/index.html
@@ -5,38 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Mundo Suculenta es una pagina informativa, en este proyecto vas a encontrar la historia de estas antiquisimas plantas y todo lo referido a ellas ">
-    <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, aloe vera, echeverria, historia, cuidados">
+    <meta name="keywords" content=" Suculentas,  plantas, jardineria, historia, cuidados">
 
-    <!--google fonts-->
+    <!--enlace a google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Mouse+Memoirs&family=Roboto:wght@100;300&family=Uchen&display=swap" rel="stylesheet">
     <!--fuentes a usar en el proyecto
-
     font-family: 'Montserrat', sans-serif;
     font-family: 'Mouse Memoirs', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-family: 'Uchen', serif;
     -->
 
-    <!-- CSS only -->
+    <!-- enlace a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <!--link a css-->
-    <link rel="stylesheet" href="css/estilos.css">
+    <!--enlace a css-->
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Mundo suculentas home</title>
 </head>
 
 <body>
-        <!--titulo de pag y navegador-->
+        <!--titulo y navegador-->
         <header class="head-nav">
             <div class="titulo">
                 <h1 class="titulo-h1">Mundo Suculenta</h1>
             </div>
             <nav class="navbar navbar-expand-md">
                 <div class="container-fluid">
-                    <a href="index.html">
-                        <img class="logo" src="./img/logopshop.png" alt="logo" width="100">
+                    <a href="./index.html">
+                        <img class="logo" src="../img/logopshop.png" alt="logo" width="100">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -70,27 +69,43 @@
         En esta época podría haber sido muy común observar este tipo de cactáceas en zonas áridas del planeta como África y algunas partes de América.
         La mayoría de las especies de suculentas, provienen de áreas secas, desiertos y semidesiertos y otras de regiones montañosas y selvas tropicales, principalmente del cuerno de África, como Namibia, Botswana, Lesoto o Sudáfrica.   
         Sin embargo, se sabe que especies como la Sempervivum o Aeonium son originarias de las Islas Canarias, los Alpes, Cárpatos, Balcanes o Turquía.</p>
-        
+    </main>
 
-        <div class="cajadefotos">
-            <div class="foto1">
-                <img src="./img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
-                <p class="pfoto">Pinches.</p>
-            </div>
-            <div class="foto2">
-                <img src="./img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
-                <p class="pfoto">Muchos cactus.</p>
-            </div>
-            <div class="foto3">
-                <img src="./img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
-                <p class="pfoto">Cactus.</p>
-            </div>
-            <div class="foto4">
-                <img src="./img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
-                <p class="pfoto">Muchas suculentas.</p>
+    <section class="index-cajadefotos">
+
+        <div class="card-index-foto">
+            <img src="/img/index echeverria2.jpg.png" alt="" class="card-foto">
+            <div class="intro-index-foto">
+                <h3 class="card-titulo">
+                Echeverria</h3>
             </div>
         </div>
-    </main>
+
+        <div class="card-index-foto">
+            <img src="/img/index aloe 1.png" alt="" class="card-foto">
+            <div class="intro-index-foto">
+                <h3 class="card-titulo">
+                Aloe Vera</h3>
+            </div>
+        </div>
+
+        <div class="card-index-foto">
+            <img src="/img/index-portulacaria.png" alt="" class="card-foto">
+            <div class="intro-index-foto">
+                <h3 class="card-titulo">
+                Portulacaria</h3>
+            </div>
+        </div>
+
+        <div class="card-index-foto">
+            <img src="/img/index-cactus.png" alt="" class="card-foto">
+            <div class="intro-index-foto">
+                <h3 class="card-titulo">
+                Cactus</h3>
+            </div>
+        </div>
+    </section>
+    
 
     <!--footer-->
     <footer>
